# message-archive-service

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  alembic.ini  docker-compose.override.yml.example  docker-compose.yml  pyproject.toml  test.sh
.github/workflows/: ci.yml
app/: __init__.py  config.py  deps.py  main.py
app/api/: health.py  messages.py  router.py
app/core/: errors.py  logging.py  metrics.py  middleware.py  pagination.py  rate_limit.py  security.py
app/db/: session.py
app/db/migrations/: env.py
app/db/migrations/versions/: 0001_initial.py
app/domain/: models.py  repository.py  schemas.py
chat/: Dockerfile  README.md  __init__.py  archive_client.py  config.py  main.py  ollama_client.py  pyproject.toml
docker/: Dockerfile  entrypoint.sh
scripts/: seed.py
tests/: conftest.py  test_app_options.py  test_auth.py  test_health.py  test_messages_api.py  test_pagination.py  test_repository.py
ui/: app.js  index.html  styles.css
