[project]
name = "message-archive"
version = "0.1.0"
description = "Message persistence service for an AI assistant system."
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "MIT" }
authors = [{ name = "Vedran" }]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "structlog>=24.4.0",
    "slowapi>=0.1.9",
    "prometheus-client>=0.21.0",
    "orjson>=3.10.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.27.0",
    "testcontainers[postgres]>=4.8.0",
    "polyfactory>=2.18.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "bandit>=1.7.10",
    "pip-audit>=2.7.0",
    "pre-commit>=4.0.0",
    "types-passlib",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

# ---------- Ruff ----------
[tool.ruff]
line-length = 100
target-version = "py312"
src = ["app", "tests"]

[tool.ruff.lint]
select = [
    "E", "F", "W",      # pycodestyle / pyflakes
    "I",                # isort
    "N",                # pep8-naming
    "UP",               # pyupgrade
    "B",                # bugbear
    "C4",               # comprehensions
    "SIM",              # simplify
    "RET",              # return
    "TID",              # tidy imports
    "PL",               # pylint
    "RUF",              # ruff-specific
    "ASYNC",            # async best-practice
    "S",                # bandit
]
ignore = [
    "PLR0913",          # too many arguments (FastAPI DI)
    "S101",             # assert allowed in tests
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S105", "S106", "PLR2004"]
"app/db/migrations/**" = ["E501", "N999", "I001"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

# ---------- Mypy ----------
[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
warn_unused_ignores = true
disallow_untyped_decorators = false
plugins = ["pydantic.mypy"]
exclude = ["app/db/migrations/", "tests/"]

[[tool.mypy.overrides]]
module = "testcontainers.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "slowapi.*"
ignore_missing_imports = true

# ---------- Pytest ----------
[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
addopts = "-ra --strict-markers --strict-config"
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning:testcontainers.*",
    "ignore::DeprecationWarning:pkg_resources.*",
]

[tool.coverage.run]
source = ["app"]
branch = true
omit = ["app/db/migrations/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "\\.\\.\\.",
]
fail_under = 90
show_missing = true

# ---------- Bandit ----------
[tool.bandit]
exclude_dirs = ["tests", "app/db/migrations"]
# B101: assert is used as type-narrowing in exception handlers; safe in our handlers
# because they are only entered with the expected type by FastAPI / Starlette.
skips = ["B101"]
